--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@pinia/nuxt": "0.11.1",
     "@tailwindcss/vite": "^4.1.8",
+    "@vite-pwa/nuxt": "1.0.4",
     "nuxt": "^3.17.5",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.8",
