Add new icons and web manifest for improved PWA support
- Added apple-touch-icon.png for iOS devices
- Added favicon-16x16.png and favicon-32x32.png for browser tabs
- Created site.webmanifest for PWA configuration with specified icons and colors

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -13,6 +13,7 @@
     "@pinia/nuxt": "0.11.1",
     "@tailwindcss/vite": "^4.1.8",
     "@vite-pwa/nuxt": "1.0.4",
+    "hls.js": "^1.6.5",
     "nuxt": "^3.17.5",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.8",
